--- a/app/templates/application.hbs
+++ b/app/templates/application.hbs
@@ -1,5 +1,9 @@
-{{!-- The following component displays Ember's default welcome message. --}}
-<WelcomePage />
-{{!-- Feel free to remove this! --}}
+<header>
+  <div class="container mx-auto">
+    <AppHeader />
+  </div>
+</header>
+  <div class="container mx-auto">
 
-{{outlet}}
+{{ outlet }}
+</div>
