--- a/app/templates/angle-bracket-syntax.hbs
+++ b/app/templates/angle-bracket-syntax.hbs
@@ -1,6 +1,40 @@
-{{#let (get-code-snippet "old-component.js" ) as |snippet|}}
-  <CodeBlock @language={{snippet.language}}>
-    {{snippet.source}}
-  </CodeBlock>
-{{/let}}
 {{outlet}}
+<div class="flex flex-wrap -mx-1 overflow-hidden">
+
+
+  <div class="my-1 px-1 w-1/2 overflow-hidden">
+  <h1>Old Component {{model.flickerImage }}</h1>
+         {{old-component
+          image=model.image
+          title="Can beer make you a better developer?"
+          class="max-w-sm w-full lg:max-w-full lg:flex"
+      }}
+  </div>
+
+  <div class="my-1 px-1 w-1/2 overflow-hidden">
+  <h1>New Component</h1>
+    <NewComponent        
+        @image={{ this.model.image }}
+        @title="Can beer make you a better developer?"
+        class="max-w-sm w-full lg:max-w-full lg:flex"
+        />
+  </div>
+
+    <div class="my-1 px-1 w-1/2 overflow-hidden">
+      {{#let (get-code-snippet "old-component.js" unindent = true) as |snippet|}}
+      <CodeBlock @language={{snippet.language}}>
+        {{snippet.source}}
+      </CodeBlock>
+    {{/let}}
+  </div>
+
+  <div class="my-1 px-1 w-1/2 overflow-hidden">
+      {{#let (get-code-snippet "new-component.js" unindent = true) as |snippet|}}
+      <CodeBlock @language={{snippet.language}}>
+        {{snippet.source}}
+      </CodeBlock>
+    {{/let}}
+  </div>
+
+
+</div>
