--- a/app/components/app-header.hbs
+++ b/app/components/app-header.hbs
@@ -1,6 +1,6 @@
 <nav class="flex items-center justify-between flex-wrap header p-6">
   <div class="flex items-center flex-shrink-0 text-white mr-6">
-    <img src="logo.png" alt="Ember Octane" class="logo">
+    <img src="../logo.png" alt="Ember Octane" class="logo">
   </div>
   <div class="block lg:hidden">
     <button class="flex items-center px-3 py-2 border rounded text-teal-200 border-teal-400 hover:text-white hover:border-white" type="button">
