--- a/app/templates/index.hbs
+++ b/app/templates/index.hbs
@@ -1,1 +1,15 @@
-{{outlet}}
+<div class="flex flex-wrap -mx-1 overflow-hidden">
+    <div class="my-1 px-1 w-1/2 overflow-hidden">
+{{#let (get-code-snippet "old-component.hbs") as |snippet|}}
+ <pre class={{snippet.language}}>{{snippet.source}}</pre>
+{{/let}}
+  </div>
+</div>
+
+<div class="flex flex-wrap -mx-1 overflow-hidden">
+    <div class="my-1 px-1 w-1/2 overflow-hidden">
+{{#let (get-code-snippet "new-component.hbs") as |snippet|}}
+ <pre class={{snippet.language}}>{{snippet.source}}</pre>
+{{/let}}
+  </div>
+</div>
