--- a/app/templates/glimmer-components/index.hbs
+++ b/app/templates/glimmer-components/index.hbs
@@ -35,5 +35,10 @@
     {{/let}}
   </div>
 
+      <div class="my-1 px-1 w-1/1 overflow-hidden">
+  <h1>From 13 Life Cycle Hooks to 2!</h1>
+  <p></p>
+  </div>
+
 
 </div>
