--- a/snippets/old-component.hbs
+++ b/snippets/old-component.hbs
@@ -1,5 +1,4 @@
-{{old-component
-  image=model.image
+{{old-component image=model.image
   title="Can beer make you a better developer?"
   class="max-w-sm w-full lg:max-w-full lg:flex"
 }}
