--- a/app/styles/app.css
+++ b/app/styles/app.css
@@ -26,3 +26,18 @@
 img {
   max-height: 300px;
 }
+.hbs{
+  padding: 20px;
+  background-color: bisque;
+  min-height: 200px;
+  display:flex;
+  align-items: center;
+}
+h1{
+  font-size: 24px;
+  font-weight:bold;
+}
+h2{
+  font-size: 18px;
+  font-weight:bold;
+}
