Update readme instructions

--- a/app/styles/app.css
+++ b/app/styles/app.css
@@ -41,3 +41,8 @@ h2{
   font-size: 18px;
   font-weight:bold;
 }
+.beer-pic{
+  background-size:30px;
+  background-repeat:no-repeat;
+  background-position:center;
+}
