--- a/app/components/app-header.hbs
+++ b/app/components/app-header.hbs
@@ -20,9 +20,13 @@
         Classes</LinkTo>
       <LinkTo @route="glimmer-components"
         class="block mt-4 lg:inline-block lg:mt-0 text-teal-200 hover:text-white mr-4">Glimmer Components</LinkTo>
+      <LinkTo @route="modifier"
+        class="block mt-4 lg:inline-block lg:mt-0 text-teal-200 hover:text-white mr-4">Modifiers</LinkTo>
+      <LinkTo @route="beers"
+        class="block mt-4 lg:inline-block lg:mt-0 text-teal-200 hover:text-white mr-4">Beers</LinkTo>
     </div>
     <div>
-      <a href="#"
+      <a href="https://github.com/dougbanville/octane-app"
         class="inline-block text-sm px-4 py-2 leading-none border rounded text-white border-white hover:border-transparent hover:text-teal-500 hover:bg-white mt-4 lg:mt-0">Download</a>
     </div>
   </div>
