--- a/snippets/modifier.hbs
+++ b/snippets/modifier.hbs
@@ -1,5 +1,3 @@
-{{#if this.shouldShow}}
-  <div {{did-insert this.fadeIn}} class="alert">
-    {{yield}}
-  </div>
-{{/if}}
+<button {{fadeIn}} class="btn bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded-full">
+  My Modifier
+</button>
