--- a/app/components/app-header.hbs
+++ b/app/components/app-header.hbs
@@ -22,8 +22,8 @@
         class="block mt-4 lg:inline-block lg:mt-0 text-teal-200 hover:text-white mr-4">Glimmer Components</LinkTo>
       <LinkTo @route="modifier"
         class="block mt-4 lg:inline-block lg:mt-0 text-teal-200 hover:text-white mr-4">Modifiers</LinkTo>
-      <LinkTo @route="beers"
-        class="block mt-4 lg:inline-block lg:mt-0 text-teal-200 hover:text-white mr-4">Beers</LinkTo>
+      <LinkTo @route="angle-bracket"
+        class="block mt-4 lg:inline-block lg:mt-0 text-teal-200 hover:text-white mr-4">Angle Brackets</LinkTo>
     </div>
     <div>
       <a href="https://github.com/dougbanville/octane-app"
