--- a/app/components/beer.hbs
+++ b/app/components/beer.hbs
@@ -11,7 +11,7 @@
       </p>
       <div class="text-gray-900 font-bold text-xl mb-2">{{@title}}</div>
       <p class="text-gray-700 text-base">{{@beer.tagline}}</p>
-      <LinkTo @route="beers.beer" @model={{@beer}}>
+      <LinkTo @route="beerDetail" @model={{@beer}}>
       <button class="bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded" type="button">
         Details
       </button>
