--- a/app/components/beer-detail.hbs
+++ b/app/components/beer-detail.hbs
@@ -1,5 +1,4 @@
-<div class="flex flex-wrap -mx-1 overflow-hidden" style="height:400px;" {{did-update this.scrollTop @model}}
-  {{did-insert this.scrollTop @model}}>
+<div class="flex flex-wrap -mx-1 overflow-hidden" style="height:400px;" >
   <div class="my-1 px-1 w-1/4 overflow-hidden">
     <img src="{{@model.image_url}}" alt="{{@model.name}}">
   </div>
