--- a/app/components/beer-container.hbs
+++ b/app/components/beer-container.hbs
@@ -1,4 +1,4 @@
-<div class="flex flex-wrap -mx-1 overflow-hidden" {{did-insert this.loadBeers}}>
+<div class="flex flex-wrap -mx-1 overflow-hidden">
   <Input @value={{this.searchText}}
     class="appearance-none block w-full bg-gray-200 text-gray-700 border border-gray-200 rounded py-3 px-4 leading-tight focus:outline-none focus:bg-white focus:border-gray-500"
     id="grid-zip" type="text" placeholder="Search" />
